c/examples/writing-a-c-compiler-tests/tests/chapter_7/invalid_semantics/extra_credit/different_labels_same_scope.c
int main(void) {
    // different labels do not define different scopes
label1:;
    int a = 10;
label2:;
    int a = 11;
    return 1;
}